--- a/style.css
+++ b/style.css
@@ -222,7 +222,28 @@ nav{
     border-radius: 15px;
     margin-top: 10px;
 }
-
+/* game classification design starts here */
+.game-classfication{
+    padding: 80px 80px;
+}
+.different-game{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.game-type{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.border-wala-image{
+    border: 1.50px solid #FF42A5;
+    border-radius: 14px;
+    padding: 7px;
+    color: #FF42A5;
+}
 /* footer part design */
 .footer-part{
     background-color: black;
@@ -293,6 +314,16 @@ nav{
     .career-image img{
         width: 100%;
     }
+    .game-classfication{
+        padding: 20px 30px;
+    }
+    .different-game{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        gap: 20px;
+    }
+
     .footer-part{
         padding: 20px 30px;
     }
@@ -343,19 +374,22 @@ nav{
     .career-image img{
         width: 100%;
     }
+    .game-classfication{
+        padding: 50px 90px;
+    }
+    .different-game{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-content: center;
+        gap: 50px;
+    }
     .footer-part{
-        padding: 20px 30px;
+        padding: 40px 80px;
     }
-    .terms{
-        grid-template-columns: repeat(2, 1fr);
-        gap: 20px;
-    }
+
     .footer-links{
         grid-template-columns: repeat(3, 1fr);
         gap: 40px;
     }
-    .footer-paragraph{
-        grid-template-columns: repeat(3, 1fr);
-        gap: 40px;
-    }
+
 }
